# landmark

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROMPT.md  README.md  SKILL.md  VISION.md  action.yml  package-lock.json  package.json  project.md  pyproject.toml  rust-toolchain.toml  vision.md
crates/landmark/: Cargo.toml
crates/landmark-mcp/: Cargo.toml
crates/landmark-mcp/src/: lib.rs  main.rs
crates/landmark/src/: claim_grounding.rs  claim_grounding_tests.rs  classification_tests.rs  cli.rs  describe.rs  errors.rs  main.rs  manifest.rs  providers.rs  release_artifact_tests.rs  release_body.rs  release_classification.rs  release_feed_tests.rs  release_grounding.rs  release_kit.rs  release_kit_contract.rs  release_kit_tests.rs  self_release.rs  semver_evidence.rs  synthesis.rs  synthesis_tests.rs  tests.rs  util.rs  version_decision.rs  version_decision_tests.rs  version_reconciliation.rs
crates/landmark/src/release_ops/: artifacts.rs  backfill.rs  contracts.rs  feed_adapter.rs  mod.rs  models.rs  release_transaction.rs  release_transaction_policy_tests.rs  run.rs
crates/landmark/src/replay/: contract_scenarios.rs  fake_server.rs  fleet_scenarios.rs  mod.rs  release_feed_scenarios.rs  release_transaction_scenarios.rs  support.rs
crates/landmark/src/replay/provider_scenarios/: consumers.rs  fabrication_gate.rs  failures.rs  grounding.rs  mod.rs  pr_pagination.rs  prestable.rs  provider_runs.rs  (+4 more)
crates/landmark/src/setup_fleet/: commands.rs  diagnose.rs  mod.rs  models.rs  plan.rs  scan.rs  workflows.rs
(+166 files in other folders)
