[project]
name = "landfall"
version = "1.12.0"
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["pytest", "requests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
