[package]
name = "landmark"
version = "1.26.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
pulldown-cmark = "0.13.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tiny_http = "0.12.0"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.25.0"
